Jann 30/objects/Investigation_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date_Formula__c</fullName>
        <formula>IF($RecordType.Name = &quot;Interview&quot;, Interview_Date__c,IF($RecordType.Name = &quot;Approval Reporting&quot;, Approval_Reporting_Date__c ,Activity_Date__c))</formula>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Formula__c</fullName>
        <formula>IF(OR($RecordType.Name = &quot;Log&quot;,$RecordType.Name = &quot;Email&quot;), TEXT(Activity_Type__c) , $RecordType.Name)</formula>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Appeal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy &amp; Procedure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Reporting_Date__c</fullName>
        <label>Approval Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Reporting_Type__c</fullName>
        <label>Approval Reporting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Addresses__c</fullName>
        <label>CC Addresses</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Short_Description__c</fullName>
        <label>Case Short Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Title__c</fullName>
        <formula>Case__r.Subject</formula>
        <label>Case Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Investigation Activity</relationshipLabel>
        <relationshipName>Investigation_Activity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Details_c__c</fullName>
        <label>Interview Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interview_Subject__c</fullName>
        <label>Interview Short Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interviewees__c</fullName>
        <label>Interviewees</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interviewers__c</fullName>
        <label>Interviewers</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LN_UNID_Case__c</fullName>
        <label>Legacy LN UNID Case</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LN_UNID__c</fullName>
        <label>Legacy LN UNID</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_By__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_Date__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethics and Compliance Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Force</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Addresses__c</fullName>
        <label>To Addresses</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Investigation Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Investigation Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Activity</pluralLabel>
    <recordTypes>
        <fullName>Decision_Process</fullName>
        <active>true</active>
        <description>Use this to log investigative reports or recommendations on Requests for Reconsideration, and the response.</description>
        <label>Approval Reporting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interview</fullName>
        <active>true</active>
        <description>Use this for interview transcripts or notes.</description>
        <label>Interview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Log</fullName>
        <active>true</active>
        <description>Use this for all other investigative records, such as emails, hotline reports, documents, etc.</description>
        <label>Log</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>